# cyphal

./: .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  cyphal.yml  dsdl.yml
book/: README.md  book.toml
book/src/: SUMMARY.md  cyphal-can.md  cyphal.md  introduction.md
cyphal/: Cargo.toml  README.md  build.rs
cyphal-bxcan/: Cargo.toml  README.md
cyphal-bxcan/src/: can.rs  frame.rs  lib.rs
cyphal-can/: Cargo.toml  README.md
cyphal-can/src/: can.rs  can_id.rs  can_node_id.rs  can_service_id.rs  can_subject_id.rs  can_transfer_id.rs  error.rs  frame.rs  inbound_queue.rs  lib.rs  message_can_id.rs  outbound_queue.rs  queue.rs  service_can_id.rs  test.rs  transport.rs
cyphal-can/src/test/: can.rs  canfd.rs  message.rs  mod.rs  service.rs
cyphal-can/src/transport/: inbound_queue.rs  mod.rs  transport.rs
cyphal-dsdl/: Cargo.toml  README.md
cyphal-dsdl/src/: comment.rs  composite.rs  directive.rs  error.rs  expression.rs  file.rs  lib.rs  name.rs  parser.rs  primitive.rs  statement.rs
cyphal-dsdl/src/directive/: assert_directive.rs  extent_directive.rs  mod.rs
cyphal-dsdl/src/parser/: comment.rs  composite.rs  directive.rs  expression.rs  mod.rs  name.rs  primitive.rs  test.rs
cyphal-dsdl/src/primitive/: bool_primitive.rs  float_primitive.rs  int_primitive.rs  mod.rs  uint_primitive.rs  void_primitive.rs
cyphal-embassy/: Cargo.toml  LICENSE-APACHE.md  README.md
cyphal-embassy/src/: lib.rs
cyphal-fdcan/: Cargo.toml  README.md
cyphal-fdcan/src/: can.rs  fd_frame.rs  frame.rs  lib.rs
cyphal-serial/: Cargo.toml  README.md
cyphal-serial/src/: lib.rs
cyphal-socketcan/: Cargo.toml  README.md
cyphal-socketcan/examples/: can.rs  can_listen.rs  can_publish.rs  canfd.rs  canfd_publish.rs
cyphal-socketcan/src/: can_fd_socket.rs  can_socket.rs  fd_frame.rs  frame.rs  lib.rs  socketcan_fd_frame.rs  socketcan_frame.rs  test.rs
cyphal-udp/: Cargo.toml  LICENSE-MIT.md  README.md
cyphal-udp/src/: error.rs  group_address.rs  header.rs  lib.rs  message_group_address.rs  message_header.rs  service_group_address.rs  service_header.rs  udp.rs  udp_node_id.rs  udp_service_id.rs  udp_subject_id.rs  udp_transfer_id.rs
cyphal-udp/src/transport/: mod.rs
cyphal-udpsocket/: Cargo.toml  README.md
cyphal-udpsocket/examples/: publish.rs
cyphal-udpsocket/src/: lib.rs  udp_socket.rs
cyphal/src/: error.rs  lib.rs  message.rs  message_transfer.rs  node_id.rs  priority.rs  request.rs  response.rs  router.rs  service.rs  service_id.rs  service_transfer.rs  subject_id.rs  test.rs  transfer.rs  transfer_id.rs  transport.rs
cyphal/src/can/: can_id.rs  can_transfer_id.rs  error.rs  message_can_id.rs  mod.rs  service_can_id.rs  socketcan.rs  transport.rs
cyphal/src/can/socketcan/: can_fd_socket.rs  can_socket.rs  mod.rs
cyphal/src/crc/: crc_table.rs  mod.rs  u64le.rs
cyphal/src/serial/: mod.rs  transport.rs
cyphal/src/test/: message.rs  mod.rs  node_id.rs  request.rs  response.rs  router.rs  service_id.rs  subject_id.rs  transfer_id.rs  transport.rs
cyphal/src/udp/: mod.rs  transport.rs
dsdl/: Cargo.toml  README.md
dsdl/src/: error.rs  file_name.rs  lib.rs  main.rs
dsdl/src/generate/: message.rs  mod.rs
examples/embassy-stm32f1/: Cargo.toml
examples/embassy-stm32g4/: Cargo.toml
examples/socketcan-service/: Cargo.toml  README.md
examples/socketcan-service/src/: get_info.rs  heartbeat.rs  main.rs  router.rs
src/: lib.rs
