[workspace]
resolver = "2"
members = [
    "cyphal",
    "cyphal-bxcan",
    "cyphal-can",
    "cyphal-dsdl",
    "cyphal-embassy",
    "cyphal-fdcan",
    "cyphal-serial",
    "cyphal-socketcan",
    "cyphal-udp",
    "cyphal-udpsocket",
    "dsdl",
]
exclude = ["examples/embassy-stm32f1", "examples/embassy-stm32g4"]

[workspace.package]
edition = "2021"
readme = "README.md"
repository = "https://github.com/cyphal-rs/cyphal"
license = "MIT OR Apache-2.0"
version = "0.0.9"

[workspace.dependencies]
async-std = "1.12.0"
