[package]
name = "cyphal-bxcan"
description = "Open Cyphal BXCAN Rust Implementation"
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cyphal = { version = "0.0.8", path = "../cyphal" }
cyphal-can = { version = "0.0.8", path = "../cyphal-can" }
bxcan = "0.7.0"
