[package]
name = "cyphal-bxcan"
description = "Open Cyphal CAN Implementation for STM32 bxcan devices"
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cyphal = { version = "0.0.9", path = "../cyphal" }
cyphal-can = { version = "0.0.9", path = "../cyphal-can" }
bxcan = "0.7.0"
