[package]
name = "cyphal-can"
description = "Open Cyphal CAN Transport Rust Implementation"
readme = "README.md"
repository = "https://github.com/cyphal-rs/cyphal"
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.0.8"

[dependencies]
cyphal = { version = "0.0.8", path = "../cyphal" }
crc = { version = "3.2.1" }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
