[package]
name = "cyphal-can"
description = "Open Cyphal CAN Transport Rust Implementation"
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cyphal = { version = "0.0.8", path = "../cyphal" }
crc = { version = "3.2.1" }

[dev-dependencies]
async-std = { workspace = true, features = ["attributes"] }
