[package]
name = "cyphal-can"
description = "Open Cyphal CAN Transport Implementation"
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cyphal = { version = "0.0.9", path = "../cyphal" }
crc = { version = "3.2.1" }

[dev-dependencies]
async-std = { workspace = true, features = ["attributes"] }
