[package]
name = "cyphal-dsdl"
description = "Open Cyphal DSDL Rust Implementation"
categories = ["embedded", "hardware-support"]
keywords = ["CAN", "Drone", "UAV", "UAVCAN", "OpenCyphal"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/cyphal-rs/cyphal"
license = "MIT OR Apache-2.0"
version = "0.0.0"

[dependencies]
thiserror = "1.0.60"
