[package]
name = "cyphal-dsdl"
description = "Open Cyphal DSDL Implementation"
categories = ["embedded", "hardware-support"]
keywords = ["CAN", "Drone", "UAV", "UAVCAN", "OpenCyphal"]
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
thiserror = "1.0.60"
