[package]
name = "cyphal-fdcan"
description = "Open Cyphal FDCAN Rust Implementation"
readme = "README.md"
repository = "https://github.com/cyphal-rs/cyphal"
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.0.6"

[dependencies]
cyphal = { version = "0.0.6", path = "../cyphal" }
cyphal-can = { version = "0.0.6", path = "../cyphal-can" }
fdcan = "0.2.0"
