[package]
name = "cyphal-fdcan"
description = "Open Cyphal FDCAN Rust Implementation"
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[package.metadata.docs.rs]
features = ["fdcan_g0_g4_l5"]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
fdcan = "0.2.0"
cyphal = { version = "0.0.9", path = "../cyphal" }
cyphal-can = { version = "0.0.9", path = "../cyphal-can" }

[features]
default = ["fdcan_g0_g4_l5"]
fdcan_g0_g4_l5 = ["fdcan/fdcan_g0_g4_l5"] # Peripheral map found on G0 G4 L5
fdcan_h7 = ["fdcan/fdcan_h7"]
