[package]
name = "cyphal-serial"
description = "Open Cyphal Serial Transport Rust Implementation"
readme = "README.md"
repository = "https://github.com/cyphal-rs/cyphal"
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.0.8"

[dependencies]
cyphal = { version = "0.0.8", path = "../cyphal" }
