[package]
name = "cyphal-socketcan"
description = "Open Cyphal SocketCAN Rust Implementation"
readme = "README.md"
repository = "https://github.com/cyphal-rs/cyphal"
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.0.7"

[dependencies]
cyphal = { version = "0.0.7", path = "../cyphal" }
cyphal-can = { version = "0.0.7", path = "../cyphal-can" }
embedded-can = "0.4.1"
socketcan = { version = "3.3.0", features = ["async-std"] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }

[[example]]
name = "can"

[[example]]
name = "canfd"
