[package]
name = "cyphal-socketcan"
description = "Open Cyphal SocketCAN Rust Implementation"
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cyphal = { version = "0.0.8", path = "../cyphal" }
cyphal-can = { version = "0.0.8", path = "../cyphal-can" }
embedded-can = "0.4.1"
socketcan = { version = "3.3.0", features = ["async-std"] }

[dev-dependencies]
async-std = { workspace = true, features = ["attributes"] }

[[example]]
name = "can_publish"

[[example]]
name = "canfd_publish"
