[package]
name = "cyphal-udpsocket"
description = "Open Cyphal UDP Socket Rust Implementation"
readme = "README.md"
repository = "https://github.com/cyphal-rs/cyphal"
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.0.8"

[dependencies]
cyphal = { version = "0.0.8", path = "../cyphal" }
cyphal-udp = { version = "0.0.8", path = "../cyphal-udp" }
async-std = "1.12.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }

[[example]]
name = "publish"
