[package]
name = "cyphal-udpsocket"
description = "Open Cyphal UDP Socket Rust Implementation"
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cyphal = { version = "0.0.9", path = "../cyphal" }
cyphal-udp = { version = "0.0.9", path = "../cyphal-udp" }
async-std.workspace = true

[dev-dependencies]
async-std = { workspace = true, features = ["attributes"] }

[[example]]
name = "publish"
