[package]
name = "cyphal"
description = "Open Cyphal Rust Implementation"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["CAN", "Drone", "UAV", "UAVCAN", "OpenCyphal"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/cyphal-rs/cyphal"
license = "MIT OR Apache-2.0"
version = "0.0.4"

[features]
can = ["dep:embedded-can", "dep:crc"]
canfd = ["dep:embedded-can", "dep:crc"]
socketcan = ["dep:socketcan"]

[dependencies]
crc = { version = "3.2.1", optional = true }
embedded-can = { version = "0.4.1", optional = true, default-features = false }
socketcan = { version = "3.3.0", optional = true }
