[package]
name = "cyphal"
description = "Open Cyphal Implementation"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["CAN", "Drone", "UAV", "UAVCAN", "OpenCyphal"]
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dev-dependencies]
async-std = { workspace = true, features = ["attributes"] }
