[package]
name = "dsdl"
description = "Open Cyphal DSDL Rust Implementation"
categories = ["embedded", "hardware-support"]
keywords = ["CAN", "Drone", "UAV", "UAVCAN", "OpenCyphal"]
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cyphal = { version = "0.0.8", path = "../cyphal" }
