[package]
name = "dsdl"
description = "Rust CLI for OpenCyphal Data Structure Description Language (DSDL) files"
categories = ["embedded", "hardware-support"]
keywords = ["CAN", "Drone", "UAV", "UAVCAN", "OpenCyphal"]
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
thiserror.workspace = true
