[package]
name = "dsdl"
description = "Rust command line interface (CLI) for OpenCyphal Data Structure Description Language (DSDL) files"
categories = ["embedded", "hardware-support"]
keywords = ["CAN", "Drone", "UAV", "UAVCAN", "OpenCyphal"]
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cyphal-dsdl = { version = "0.0.9", path = "../cyphal-dsdl" }
clap = { version = "4.5.4", features = ["derive"] }
thiserror.workspace = true
