[package]
name = "embassy-stm32f1"
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32f103c8 to your chip name if necessary.
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt",
    "stm32f103c8",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
] }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2.0.0"

cyphal = { path = "../../cyphal" }
cyphal-can = { path = "../../cyphal-can" }
cyphal-embassy = { path = "../../cyphal-embassy" }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

[[bin]]
name = "derive"
test = false
bench = false

[[bin]]
name = "manual"
test = false
bench = false
