[package]
name = "embassy-stm32g4"
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32g491re to your chip name if necessary.
embassy-stm32 = { version = "0.1.0", path = "../../../../embassy/embassy-stm32", features = [
    "defmt",
    "time-driver-any",
    "stm32g491re",
    "memory-x",
    "unstable-pac",
    "exti",
] }
embassy-executor = { version = "0.5.0", path = "../../../../embassy/embassy-executor", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", path = "../../../../embassy/embassy-time", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2.0.0"

cyphal = { path = "../../cyphal" }
cyphal-can = { path = "../../cyphal-can" }
cyphal-embassy = { path = "../../cyphal-embassy" }
embedded-can = "0.4.1"
embedded-alloc = "0.5.1"

[profile.release]
debug = 2


[[bin]]
name = "manual"
test = false
bench = false
